# tapmap-application

./: .env.example  .gitignore  DockerFile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 08910cff655d_initial_migration.py  0d686b344459_update_driver_table.py  25852f0c8ebe_delete_stauts_column_in_user_blocking_.py  49efce6c07a7_add_role_for_user.py  84aa580b6db9_.py  90a278de5608_initial.py  9741b0770eec_status_for_user_and_blockin_user_table.py  a2205a99f341_add_driver_las_location.py  b95824eeccdb_.py  d741a5ab0faa_added_user_id_column_to_blocking_user_.py  db583ba81840_add_tg_bots_session_user_table.py  feab404faeec_added_is_active_column_to_blockin_user_.py
app/: config.py  main.py
app/api/: dependencies.py  lifespan.py  main.py
app/api/services/: jwt_service.py
app/application/commands/: base.py  city.py  converters.py  driver.py  order.py  user.py  vehicle.py
app/application/dtos/: city.py  draft_order.py  driver.py  location.py  order.py  user.py  vehicle.py
app/bots/user_tg_bot/: main.py  (+1 more)
app/core/: factory.py
app/dispatcher/: handlers.py  main.py  schemas.py
app/services/: authentication.py  authorization.py  geolocation.py
app/settings/: __init__.py  auth.py  base.py  database.py  external.py  messaging.py
app/utils/: __init__.py  draft_order_keys.py  jwt_service.py
docker/: api.yml  dispatcher.yml  driver_tg_bot.yml  storages.yml  user_tg_bot.yml
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_user_repository.py
tests/unit/: conftest.py
(+320 files in other folders)
