[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KamaZ.36 <danila.skidan@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
shapely = "^2.1.1"
pytest = "^8.4.1"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
geoalchemy2 = "^0.17.1"
httpx = {extras = ["http2"], version = "^0.28.1"}
uvicorn = "^0.34.3"
pyjwt = "^2.10.1"
dishka = "^1.6.0"
redis = "^6.2.0"
loguru = "^0.7.3"
pytest-asyncio = "^1.0.0"
python-multipart = "^0.0.20"
aiokafka = "^0.12.0"
aiogram = "^3.22.0"
faststream = {extras = ["cli"], version = "^0.5.48"}
orjson = "^3.11.3"
adaptix = "^3.0.0b11"
h2 = "^4.3.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.2"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
